PIXMAPS = xchm-16.xpm xchm-32.xpm xchm-48.xpm xchm-128.xpm xchmdoc-16.xpm \
	xchmdoc-32.xpm xchmdoc-48.xpm xchmdoc-128.xpm \
	xchm-16.png xchm-32.png xchm-48.png xchm-128.png xchmdoc-16.png \
	xchmdoc-32.png xchmdoc-48.png xchmdoc-128.png


EXTRA_DIST = *.xpm *.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = $(PIXMAPS)

